# ADK-agentic-scaffolding

./: .gitignore  LICENSE  README.md
backend/: README.md  pyproject.toml
backend/src/: adk_runtime.py  app.py  config.py  models.py
backend/src/agents/cycling_expert/: agent.py
backend/src/agents/cycling_expert/tools/: cycling.py
backend/src/agents/root/: agent.py
backend/src/agents/root/.adk/: session.db
frontend/: README.md  pyproject.toml
frontend/src/: app.py
